Some changes with liskov principle in mind.